--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -10,6 +10,16 @@
     margin-bottom: 12px;
 }
 
+.wd-bookmark {
+    border-style: solid;
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 1px;
+    border-color: rgb(47,51,54);
+    margin-top: 12px;
+}
+
 .wd-avatar-div {
     overflow: hidden;
 }
